	 Don't Save, Cancel" functionality on IDE disk eject.
20050218 ide.[ch],simpleide.c,zxatasp.c,zxcf.c: add ide_insert function.
20050219 machines/specplus3.c: add "Save, Don't Save, Cancel" functionality on
	 +3 disk eject.
20050219 machines/specplus3.c: the +3 disk autoload snap is now an SZX file.
20050219 ide.[ch],simpleide.c,zxatasp.c,zxcf.c: make ide_insert check whether
	 the currently inserted disk is dirty before doing the insert.
20050219 ui/gtk/gtkui.c: check for modified IDE disks before exit.
20050219 machines/specplus3.c,ui/gtk/gtkui.c: check for modified +3 disks
	 before exit.
20050219 snapshot.c: ensure all menus etc are updated after snapshot load.
20050219 trdos.c,ui/gtk/gtkui.c: add "Save, Don't Save, Cancel"
	 functionality for TR-DOS disks.
20050223 input.[ch],keysyms.dat,ui/gtk/gtkkeyboard.c,ui/xlib/xkeyboard.c,
	 widget/text.c: enable 'native' keysyms to be passed through to
	 the widget controls, rather than the 'Spectrum' keysyms.
20050223 display.c: force border to be redrawn in display_refresh_all();
	 means the border gets correctly restored after Help/Keyboard
	 widget.
20050226 input.c: drive the joystick from the Spectrum keysym, not the
	 native one, or (the emulating machine's) Caps Lock causes
	 problems.
20050226 ui/gtk/gtkjoystick.c: use two columns of five rather than one
	 column of ten for the fire button configuration (patch #1150711)
	 (Darren).
20050226 ui/gtk/{gtkdisplay.c,gtkui.c},ui/xlib/xdisplay.c: make the size
	 of the Spectrum screen be the smaller of the width and height of
	 our window (patch #1150684) (Darren).
20050226 ui/gtk/{debugger.c,gtkinternals.h,gtkui.c,memory.c}: make the
	 scroll wheel work when used over the disassembly pane or the
	 memory dump (patch #1150709) (Darren).
20050226 tape.[ch]: Media/Tape/Play always starts the tape playing, even
	 if tape traps are active. Makes working with normal speed custom
	 loader blocks less painful (patch #1150682) (Darren).